tests/expectations/compiler/integers/i32/no_space_between_literal.out
Error [EPAR0370005]: expected ';' -- found 'i32'
    --> compiler-test:4:15
     |
   4 |     let i = 1 i32;
     |               ^^^
